<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8"
    tools:context="social.entourage.android.authentication.login.LoginActivity"
    android:background="@color/accent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:id="@+id/login_block_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/empty_description"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_action_back"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_block_signup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_block_navigation"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_title_welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/entourage_font_xtra_large"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_block_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <social.entourage.android.view.CountryCodePicker.CountryCodePicker
                android:id="@+id/login_ccp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                app:ccp_backgroundColor="@color/accent"
                app:ccp_countryPreference="FR,BE,CA,GP,GF,MQ,MU,YT,PF,RE,RO"
                app:ccp_defaultNameCode="FR"
                app:ccp_hidePhoneCode="true"
                app:ccp_selectionDialogShowSearch="false"
                app:ccp_showFlag="false"
                app:ccp_textColor="@color/white">

            </social.entourage.android.view.CountryCodePicker.CountryCodePicker>

            <EditText
                android:id="@+id/login_edit_phone"
                style="@style/CustomEditTextThemeAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/login_hint_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="12"
                android:textColor="@color/white"
                android:textSize="@dimen/entourage_font_large"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:alpha=".5"
                android:background="@color/white"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha=".5"
                android:background="@color/white"/>
        </LinearLayout>

        <EditText
            android:id="@+id/login_edit_code"
            style="@style/CustomEditTextThemeAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_hint_code"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="@color/white"
            android:textSize="@dimen/entourage_font_large"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/login_edittext_hint_alpha"/>

        <Button
            android:id="@+id/login_button_signin"
            style="@style/WhiteButton.RoundedCorners"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login_button_signin"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/login_text_lost_code"
            style="@style/SpacedTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/login_text_lost_code"
            android:textAllCaps="false"
            android:textColor="@color/custom_clickable_text_white"
            android:textSize="@dimen/entourage_font_small"/>

    </LinearLayout>

</RelativeLayout>