<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/login_view"
              tools:context=".authentication.login.LoginActivity"
    >

    <fragment
        android:id="@+id/fragment"
        android:name="social.entourage.android.authentication.login.slideshow.LoginSlideshowFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/login_slideshow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button_register"
            style="@style/WhiteButton.RoundedCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_button_register"/>

        <Button
            android:id="@+id/login_button_login"
            style="@style/AccentButton.BigRoundedCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_button_login"/>
    </LinearLayout>

</RelativeLayout>