...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty_description"
                app:srcCompat="@drawable/registration_welcome_group"/>

            <Button
                android:id="@+id/register_welcome_start_button"
                style="@style/WhiteButton.RoundedCorners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/registration_welcome_start"/>

...
