...
                    android:elevation="10dp"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingHorizontal="28dp"
                android:paddingTop="21dp"
...
                android:id="@+id/option_button"
                android:layout_gravity="start"
                android:background="@drawable/ic_conversation_more_option"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/comment_message"
                style="@style/left_courant_orange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_button_grey_stroke_slim"
                android:hint="@string/discussbis"
...
                android:inputType="textCapSentences|textMultiLine"
                android:textColorHint="@color/grey_onboarding_item_border"
                android:textColor="@color/black"
                />

            <ImageButton
                android:id="@+id/comment"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_button_inactive_light_orange"
                android:gravity="end"
                android:paddingVertical="10dp"
...
